[Minor] Some code cleanup for JDK 9